All engine instruments for the B1900D. Includes a MovingAverage filter in PlaneData.